--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,40 @@
 version: "3.7"
 
 services:
-  mosquitto:
+  raspberry_circuit:
+    build: raspberry_circuit/
+    environment:
+      - MQTT_BROKER=mqtt_broker
+      - MQTT_PORT=1883
+    depends_on:
+      - mqtt_broker
+    networks:
+      - rasp_network
+
+  raspberry_server:
+    build: raspberry_server/
+    environment:
+      - MQTT_BROKER=mqtt_broker
+      - MQTT_PORT=1883
+    depends_on:
+      - mqtt_broker
+    networks:
+      - rasp_network
+    ports:
+      - "3001:3001"
+
+  mqtt_broker:
     image: eclipse-mosquitto
     hostname: mosquitto
-    container_name: mosquitto
     restart: unless-stopped
     ports:
       - "1883:1883"
       - "9001:9001"
     volumes:
-      - ./mosquitto:/etc/mosquitto
-      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mosquitto:/mosquitto/config
+    networks:
+      - rasp_network
+
+networks:
+  rasp_network:
+    driver: bridge
