--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,2 +1,8 @@
+persistence true
+persistence_location /mosquitto/data/
+log_dest file /mosquitto/log/mosquitto.log
+
 allow_anonymous false
-password_file /etc/mosquitto/passwd
+password_file /mosquitto/config/passwd
+
+listener 1883
